RESOLVED FIXED72069
ASSERT when outdenting styled line break
https://bugs.webkit.org/show_bug.cgi?id=72069
Summary ASSERT when outdenting styled line break
Enrica Casucci
Reported 2011-11-10 15:54:34 PST
Given the following markup: <body contenteditable> <blockquote style….> <img> <br> <b><br></br> </blockquote> </body> placing the selection on the last <br> and performing and outdent command will trigger an assert.
Attachments
Patch (5.60 KB, patch)
2011-11-10 16:48 PST, Enrica Casucci
rniwa: review+
Enrica Casucci
Comment 1 2011-11-10 15:57:46 PST
Enrica Casucci
Comment 2 2011-11-10 16:48:28 PST
Ryosuke Niwa
Comment 3 2011-11-10 16:55:39 PST
Comment on attachment 114602 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=114602&action=review > Source/WebCore/ChangeLog:10 > + the assert. Could you fit "the assert" on the previous line to avoid an awkward line break? > Source/WebCore/ChangeLog:12 > + Reviewed by NOBODY (OOPS!). This line should appear before the description.
Enrica Casucci
Comment 4 2011-11-10 16:59:55 PST
(In reply to comment #3) > (From update of attachment 114602 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=114602&action=review > > > Source/WebCore/ChangeLog:10 > > + the assert. > > Could you fit "the assert" on the previous line to avoid an awkward line break? > > > Source/WebCore/ChangeLog:12 > > + Reviewed by NOBODY (OOPS!). > > This line should appear before the description. Will do. Thanks for the review!
Enrica Casucci
Comment 5 2011-11-10 17:26:50 PST
Committed revision 99918.
Note You need to log in before you can comment on or make changes to this bug.