Source/WebCore/editing/htmlediting.cpp
@@ -296,6 +296,11 @@ bool isBlock(const Node* node)
     return node && node->renderer() && !node->renderer()->isInline();
 }
 
+bool isInline(const Node* node)
+{
+    return node && node->renderer() && node->renderer()->isInline();
+}
+
 // FIXME: Deploy this in all of the places where enclosingBlockFlow/enclosingBlockFlowOrTableElement are used.
 // FIXME: Pass a position to this function.  The enclosing block of [table, x] for example, should be the 
 // block that contains the table and not the table, and this function should be the only one responsible for 
